--- a/slides/2022-09-06-graphql-fullstack.html
+++ b/slides/2022-09-06-graphql-fullstack.html
@@ -2231,12 +2231,15 @@ _Schreibe einen Test für unsere GraphQL-API_
   * `publy-userservice` starten (Klasse: `nh.graphql.publy.userservice.UserserviceApplication`)
   * `publy-backend` starten (Klasse: `nh.publy.backend.PublyApplication`)
   * Diese beiden Prozesse können im folgenden einfach immer weiter laufen. Wir machen daran keine Änderungen mehr.
-* **Frontend**
-  * Im Verzeichnis `publy-frontend`: `pnpm install` und `pnpm start`
+* **Frontend** (Verzeichnis: `publy-frontend`)
+  * Verzeichnis `publy-frontend/src` löschen
+  * `frontend-steps/01_initial_uebungen/src` nach `publy-frontend/src` kopieren
+  * Im Verzeichnis `publy-frontend` Packages installieren und starten:
+    * `pnpm install`
+    * `pnpm start`
   * Frontend sollte dann auf http://localhost:3000 laufen
     * Header und "Read more"-Button sollten angezeigt werden
 * Wenn fertig, bitte in Zoom "Hand heben" 🙋
-
   </textarea
           >
         </section>
