--- a/slides/2023-05-08-jax-workshop.html
+++ b/slides/2023-05-08-jax-workshop.html
@@ -45,8 +45,8 @@
           <div style="margin-top: 6rem">
             <h3><span class="transparent-bg">Slides (online)</span></h3>
             <p>
-              <a class="Link" href="https://graphql.schule/jax2023"
-                >https://graphql.schule/jax2023</a
+              <a class="Link" href="https://graphql.schule/jax-2023-workshop"
+                >https://graphql.schule/jax-2023-workshop</a
               >
             </p>
           </div>
