--- a/slides/2023-10-18-baselone-workshop.html
+++ b/slides/2023-10-18-baselone-workshop.html
@@ -45,7 +45,7 @@
           <div style="margin-top: 6rem">
             <h3><span class="transparent-bg">Slides (online)</span></h3>
             <p>
-              <a class="Link" href="https://graphql.schule/jax-2023-workshop"
+              <a class="Link" href="https://graphql.schule/baselone23"
                 >https://graphql.schule/baselone23</a
               >
             </p>
