--- a/slides/2023-11-06-wjax-workshop.html
+++ b/slides/2023-11-06-wjax-workshop.html
@@ -21,42 +21,46 @@
     <div class="reveal">
       <div class="slides">
         <section data-state="title">
-          <h4 style="margin-bottom: 3rem; font-size: 3rem">
-            <span class="transparent-bg">
-              <a href="https://nilshartmann.net" target="_blank"
-                >Nils Hartmann</a
-              >
-              |
-              <a href="https://twitter.com/nilshartmann" target="_blank"
-                >@nilshartmann</a
-              >
-            </span>
-          </h4>
-          <h2 class="title" style="font-size: 7rem">
-            <b>GraphQL APIs mit Spring</b>
-          </h2>
-          <h3 class="title" style="font-size: 5rem; margin-bottom: 3rem">
-            <b>Der praktische Einstieg</b>
-          </h3>
-          <h3 class="title" style="font-size: 3rem; margin-bottom: 3rem">
-            <b>W-JAX München, 6. November 2023</b>
-          </h3>
+          <div class="title-content">
+            <h4 style="margin-bottom: 3rem; font-size: 3rem">
+              <span class="transparent-bg">
+                <a href="https://nilshartmann.net" target="_blank"
+                  >Nils Hartmann</a
+                >
+                |
+                <a href="https://twitter.com/nilshartmann" target="_blank"
+                  >@nilshartmann</a
+                >
+              </span>
+            </h4>
+            <h2 class="title" style="font-size: 7rem">
+              <b>GraphQL APIs mit Spring</b>
+            </h2>
+            <h3 class="title" style="font-size: 5rem; margin-bottom: 3rem">
+              <b>Der praktische Einstieg</b>
+            </h3>
+            <h3 class="title" style="font-size: 3rem; margin-bottom: 3rem">
+              <b>W-JAX München, 6. November 2023</b>
+            </h3>
 
-          <div style="margin-top: 6rem">
-            <h3><span class="transparent-bg">Slides (online)</span></h3>
-            <p>
-              <a class="Link" href="https://graphql.schule/wjax-2023-workshop"
-                >https://graphql.schule/wjax-2023-workshop</a
-              >
-            </p>
-          </div>
-          <div style="margin-top: 6rem">
-            <h3><span class="transparent-bg">Workspace Installation</span></h3>
-            <p>
-              <a class="Link" href="https://graphql.schule/install"
-                >https://graphql.schule/install</a
-              >
-            </p>
+            <div style="margin-top: 6rem">
+              <h3><span class="transparent-bg">Slides (online)</span></h3>
+              <p>
+                <a class="Link" href="https://graphql.schule/wjax-2023-workshop"
+                  >https://graphql.schule/wjax-2023-workshop</a
+                >
+              </p>
+            </div>
+            <div style="margin-top: 6rem">
+              <h3>
+                <span class="transparent-bg">Workspace Installation</span>
+              </h3>
+              <p>
+                <a class="Link" href="https://graphql.schule/install"
+                  >https://graphql.schule/install</a
+                >
+              </p>
+            </div>
           </div>
         </section>
         <section>
